# ble-mgr-rn-app

./: .gitignore  App.tsx  app.json  package.json
android/: build.gradle  settings.gradle
android/app/: build.gradle  proguard-rules.pro
android/app/src/debug/java/com/blemanagerapps/: ReactNativeFlipper.java
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  native_root_check.c  root_detector.c
android/app/src/main/java/com/blemanagerapps/: EnhancedRootDetectionModule.java  FileCheckModule.java  FileCheckPackage.java  MainActivity.java  MainApplication.java  NativeRootDetection.java  RootCheckModule.java  RootCheckPackage.java  RootDetectionModule.java  RootDetectionPackage.java  RootDetector.java  SSLPinningFactory.java
android/app/src/main/res/values/: strings.xml
android/app/src/release/java/com/blemanagerapps/: ReactNativeFlipper.java
android/gradle/wrapper/: gradle-wrapper.properties
ios/: Podfile
ios/BleManagerApps/: AppDelegate.mm  Info.plist  LaunchScreen.storyboard
ios/BleManagerApps.xcodeproj/: project.pbxproj
ios/BleManagerApps.xcodeproj/xcshareddata/xcschemes/: BleManagerApps.xcscheme
ios/BleManagerAppsTests/: BleManagerAppsTests.m
patches/: react-native-gradle-plugin+0.71.19.patch
src/hooks/: useBle.ts
src/screens/HomeScreen/: index.tsx
src/screens/ImagePickerScreen/: index.tsx
src/screens/RequestApiScreen/: index.js
src/screens/RootDetectionScreen/: index.tsx  useRootDetection.ts
